--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
     }
   ],
   "require": {
-    "php": "~7.4|~8",
-    "phpunit/phpunit": "^9.6"
+    "php": ">=8.1",
+    "phpunit/phpunit": "^10.0"
   },
   "require-dev": {
     "phpstan/phpstan": "^1.11",
