--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   ],
   "require": {
     "php": "~7.4|~8",
-    "phpunit/phpunit": ">=9.6"
+    "phpunit/phpunit": "^9.6|^10.0"
   },
   "require-dev": {
     "phpstan/phpstan": "^1.11",
